c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/switch_single_case.c
int main(void) {
    int a = 1;
    // a switch statement body may be a single case
    switch(a) case 1: return 1;
    return 0;
}