c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/undeclared_var_switch_expression.c
int main(void) {
    // test that variable resolution traverse the controlling epxression
    // in switch statements
    switch(a) {
        case 1: return 0;
        case 2: return 1;
    }
    return 0;
}